[FIX] web_editor: fix underline/strike on gradient text
Problem:
Using `-webkit-text-fill-color: transparent;` in `.text-gradient`
is required for gradient text, but it also causes underline (`<u>`)
and strikethrough (`<s>`) styles to become invisible, since those
decorations rely on the text fill color.

This results in the lines under `u` and `s` elements not being
rendered when gradient text is applied.

Solution:
Render the underline and strikethrough manually using a
`background-image` (gradient) applied to `s` and `u` tags.
This simulates the missing lines while keeping the gradient
text style.

Ensure the `font` tag is always placed outside the `u` or `s`
tags (e.g., `<font><u>text</u></font>`), so the gradient style
applies correctly to the entire decorated text.

Steps to reproduce:
1. Add a text block in the website editor.
2. Apply a text color gradient.
3. Apply underline or strikethrough.
→ The underline/strikethrough is not visible.

opw-4797201

closes odoo/odoo#221717

X-original-commit: 8d7087073cb889ab44c2fadcee1bee23ff63a07b

--- a/addons/web_editor/static/src/scss/web_editor.common.scss
+++ b/addons/web_editor/static/src/scss/web_editor.common.scss
@@ -846,6 +846,27 @@ section, .oe_img_bg, [data-oe-shape-data] {
     .fa {
         display: inherit;
     }
+
+    %o-text-gradient-decoration {
+        background-size: 100% 0.1em;
+        background-repeat: repeat-x;
+        background-image: inherit !important;
+        text-decoration-color: transparent !important;
+        color: transparent;
+        caret-color: black;
+    }
+    * {
+        background-size: 0px;
+        background-image: inherit !important;
+    }
+    s:not(font[style*="-webkit-text-fill-color"] s) {
+        @extend %o-text-gradient-decoration;
+        background-position: 0 50%;
+    }
+    u:not(font[style*="-webkit-text-fill-color"] u) {
+        @extend %o-text-gradient-decoration;
+        background-position: 0 95%;
+    }
 }
 
 /* QWEB */
